# SPARX-E

./: .clang-format  .clang-tidy  .gitignore  RotationTest_raw.csv  [object Object]  clean_rebuild.sh  goldenboy.txt  start_rover.sh
analysis/: aligndata.py  analyze.py  driver.py  filter_cutoffs.txt  mag_calibration.txt  parser.py  plot_kf.py  plot_trajectory.py
doxygen/html/: ISensor_8hpp.html  ISensor_8hpp.js  ISensor_8hpp__dep__incl.map  ISensor_8hpp__dep__incl.md5  ISensor_8hpp__incl.map  ISensor_8hpp__incl.md5  ISensor_8hpp_source.html  README_8md.html  README__CN_8md.html  README__PI__GATEWAY_8md.html  VERSION_8md.html  __env__s_8c_8o_8d.html  __env__s_8c_8o_8d_source.html  __lidar__processor__s_8ep_8rosidl__typesupport__c_8c_8o_8d.html  __lidar__processor__s_8ep_8rosidl__typesupport__c_8c_8o_8d_source.html  __lidar__processor__s_8ep_8rosidl__typesupport__fastrtps__c_8c_8o_8d.html  __lidar__processor__s_8ep_8rosidl__typesupport__fastrtps__c_8c_8o_8d_source.html  __lidar__processor__s_8ep_8rosidl__typesupport__introspection__c_8c_8o_8d.html  __lidar__processor__s_8ep_8rosidl__typesupport__introspection__c_8c_8o_8d_source.html  __obstacle__s_8c_8o_8d.html  __obstacle__s_8c_8o_8d_source.html  aligndata_8py.html  aligndata_8py.js  aligndata_8py_source.html  analysis_2install_2__local__setup__util__sh_8py.html  analysis_2install_2__local__setup__util__sh_8py.js  analysis_2install_2__local__setup__util__sh_8py_source.html  analyze_8py.html  analyze_8py.js  analyze_8py_source.html  anis_8py.html  anis_8py.js  anis_8py_source.html  annotated.html  annotated_dup.js  arduino__bridge_2src_2main_8cpp.html  arduino__bridge_2src_2main_8cpp.js  arduino__bridge_2src_2main_8cpp__incl.map  arduino__bridge_2src_2main_8cpp__incl.md5  arduino__bridge_2src_2main_8cpp_source.html  (+3500 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_25.js  all_26.js  all_27.js  all_29.js  all_2a.js  all_2b.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  (+137 more)
doxygen/latex/: ISensor_8hpp.tex  ISensor_8hpp__dep__incl.md5  ISensor_8hpp__incl.md5  ISensor_8hpp_source.tex  README_8md.tex  README__CN_8md.tex  README__PI__GATEWAY_8md.tex  VERSION_8md.tex  __env__s_8c_8o_8d.tex  __env__s_8c_8o_8d_source.tex  __lidar__processor__s_8ep_8rosidl__typesupport__c_8c_8o_8d.tex  __lidar__processor__s_8ep_8rosidl__typesupport__c_8c_8o_8d_source.tex  __lidar__processor__s_8ep_8rosidl__typesupport__fastrtps__c_8c_8o_8d.tex  __lidar__processor__s_8ep_8rosidl__typesupport__fastrtps__c_8c_8o_8d_source.tex  __lidar__processor__s_8ep_8rosidl__typesupport__introspection__c_8c_8o_8d.tex  __lidar__processor__s_8ep_8rosidl__typesupport__introspection__c_8c_8o_8d_source.tex  __obstacle__s_8c_8o_8d.tex  __obstacle__s_8c_8o_8d_source.tex  aligndata_8py.tex  aligndata_8py_source.tex  analysis_2install_2__local__setup__util__sh_8py.tex  analysis_2install_2__local__setup__util__sh_8py_source.tex  analyze_8py.tex  analyze_8py_source.tex  anis_8py.tex  anis_8py_source.tex  annotated.tex  arduino__bridge_2src_2main_8cpp.tex  arduino__bridge_2src_2main_8cpp__incl.dot  arduino__bridge_2src_2main_8cpp_source.tex  arduino__bridge_8hpp.tex  arduino__bridge_8hpp__dep__incl.dot  arduino__bridge_8hpp__dep__incl.md5  arduino__bridge_8hpp__incl.dot  arduino__bridge_8hpp__incl.md5  arduino__bridge_8hpp_source.tex  arduino__main_8cpp.tex  arduino__main_8cpp_8o_8d.tex  arduino__main_8cpp_8o_8d_source.tex  arduino__main_8cpp__incl.md5  (+1999 more)
scripts/: anis.py  bias_calc.py  test.py
src/: Doxyfile  utils.h
src/bridges/: CMakeLists.txt  package.xml
src/bridges/include/bridges/: arduino_bridge.hpp  bridge.hpp  uwb_bridge.hpp
src/bridges/src/: arduino_main.cpp  uwb_main.cpp
src/build_sparxe/: package.xml  setup.cfg  setup.py
src/build_sparxe/launch/: sparxe.launch.py
src/camera/: package.xml  setup.py
src/camera/camera/: main.py
src/lidar_processor/: CMakeLists.txt  package.xml
src/lidar_processor/msg/: Env.msg  Obstacle.msg
src/lidar_processor/src/: main.cpp  plotshit.py
src/motor_commander/: CMakeLists.txt  package.xml
src/motor_commander/include/motor_commander/: motor_commander.hpp  smc_node.hpp
src/motor_commander/src/: mc_main.cpp  smc_main.cpp
src/nav_filters/: CMakeLists.txt  package.xml
src/nav_filters/include/nav_filters/: ISensor.hpp  auto_publisher.hpp  ckf.hpp  ekf.hpp  mekf.hpp  nav_node.hpp  trans_ekf.hpp
src/nav_filters/src/: auto_pub.cpp  main.cpp
src/status_updater/: package.xml  setup.cfg  setup.py
src/status_updater/status_updater/: main.py
src/uwb_bridge/src/: main.cpp
